--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
 morning_hour = 6
+ffmpeg_path = "A:/bin/ffmpeg/bin/ffmpeg.exe"
+limbus_source = "D:/Code/don-quixote/resource/limbus.wav"
 
 [greetings]
 morning = "Yaaawn… You must be one diligent laborer, Manager Esquire. How on earth do you manage to rouse yourself at this hour…?"
@@ -9,3 +11,14 @@ night = "Manager Esquire!!!!! To where in the world hast thou disappeared!!!!!!!
 [[general_channels]]
 guild_id = 931712635819405342
 channel_id = 931712638742855732
+voice_id = 931712638742855733
+
+# [[general_channels]]
+# guild_id = 1063348343620776017
+# channel_id = 1084664957456633936
+# voice_id = 1063348344589647882
+
+# [[general_channels]]
+# guild_id = 828832717444481064
+# channel_id = 875135069809946705
+# voice_id = 1054110980025630740
